syntax = "proto3";

option csharp_namespace = "DiscountService.Proto";

service DiscountServiceProto
{
	rpc GetDiscountByCode(RequestGetDiscountByCode) returns(ResultGetDiscountByCode);

	rpc UsedDiscount(RequestUsedDiscount) returns(ResultUsedDiscount);
	
	rpc AddNewDiscount(RequestAddNewDiscount) returns(ResultAddNewDiscount);
}


message RequestGetDiscountByCode
{
	string Code=1;
}
message ResultGetDiscountByCode{
	string Id=1;
	int32 Amount=2;
	string Code=3;
	bool Used=4;
}



message RequestUsedDiscount
{
	string Id=1;
}
message ResultUsedDiscount
{
	bool isSuccess=1;
}



message RequestAddNewDiscount{
	int32 Amount=1;
	string Code=2;
}
message ResultAddNewDiscount
{
	bool isSuccess=1;
}